# obsidian-vault-auto-tagger

./: .coverage  README.md  pyproject.toml
src/: main.py
src/obsidian_vault_auto_tagger/: logic.py  prompts.py  schema.py
tests/: test_logic.py  test_prompts.py  test_scan_command.py
